--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,23 +1,38 @@
 {
-  "Thanks": {
-    "1": "Thank you"
-  },
-  "Why": {
-    "1": "For watching this video"
-  },
-  "main-content": {
-    "1": "'Prestige Paris Transfer' is a private shuttle transfer company approved by the French government. It is reputed to be one of the most user-friendly and cost-effective shuttle transfer services. We provide transport services to and from Charles de Gaulle Roissy (CDG), Orly (ORY), Le Bourget (LBG), Beauvais Airport (BVA), Disneyland and from any where in France."
-  },
-  "arrival": {
-    "1": "Arrival"
-  },
-  "departure": {
-    "1": "Departure"
-  },
-  "round-trip": {
-    "1": "Round Trip"
-  },
-  "language": {
-    "1": "English"
-  }
+  "language": "English",
+  "main-content": "'Prestige Paris Transfer' is a private shuttle transfer company approved by the French government. It is reputed to be one of the most user-friendly and cost-effective shuttle transfer services. We provide transport services to and from Charles de Gaulle Roissy (CDG), Orly (ORY), Le Bourget (LBG), Beauvais Airport (BVA), Disneyland and from any where in France.",
+  "arrival": "Arrival",
+  "departure": "Departure",
+  "round-trip": "Round Trip",
+  "footer-desc": "'Prestige Paris Transfer' is a private transfer service renowned for being one of the friendliest and most cost-effective airport shuttle around.",
+  "quick-links": "Quick Links",
+  "book-now": "Book Now",
+  "rates": "Rates",
+  "call": "Call",
+  "contact": "Contact",
+  "pickup-location": "Pickup Location",
+  "select-pickup-location": "Select Pickup Place...",
+  "drop-location": "Drop-off Location",
+  "select-drop-location": "Select Drop Place...",
+  "adult-riders": "Adult Riders",
+  "child-riders": "Child",
+  "your-travel-fare": "Your Travel Fare",
+  "our-service": "OUR SERVICE",
+  "efficient": "Efficient",
+  "worthy": "Worthy",
+  "safe": "Safe",
+  "professional": "Professional",
+  "support": "Support",
+  "efficient-desc": "You will be provided with a faster, comfortable and reliable journey.",
+  "worthy-desc": "Best services with affordable prices.",
+  "safe-desc": "Safe journey for you and your family.",
+  "professional-desc": "Excellent service with well trained professionals.",
+  "support-desc": "Best customer service with well trained customer support staff.",
+  "special-packages": "Special Packages",
+  "package-1": "Book Prestige Paris Transfer for a comfortable trip from CDG to Disneyland Paris. Amazing offers for single and round trips and you are facilitated with no extra charges for your luggage. Need a visit to Disneyland? Book now!",
+  "package-2": "For reliable travel between Orly Airport and Paris, book us now! Prestige Paris Transfer offers you the best service. No extra charges for luggage and no credit cards are required for the booking. You are privileged with the best cost saving offers for single and round trip transfers.",
+  "package-3": "Want a comfortable journey in luxury vehicles? Prestige Paris Transfer is your choice. We ensure a comfortable travel between the ORLY Airport and Disneyland Paris. No extra charges for luggage and you can choose single or round trip transfers. Want to visit Disneyland? Book us now!",
+  "package-4": "For a fast, reliable journey between CDG and Paris, book Prestige Paris Transfer. You can comfortably travel in our luxury vehicles and you can have your luggage without any extra charges. We will give you the best offers for single and round trips. Want to transfer from Roissy-Charles de Gaulle Airport to Paris? Book Prestige Paris Transfer!",
+  "package-5": "Need to visit Disneyland? Book Prestige Paris Transfer for your transfers between the Beauvais Airport and Disneyland Paris. No need to pay extra for your luggage and you can choose either single or round trip transfers. We provide toy faster and reliable transfers in our luxury vehicles. Book us now!",
+  "package-6": "For affordable travel between Beauvais Airport and Paris, book Prestige Paris Transfer now! Best offers for your single and round trips. No extra charges for luggage and we provide you a better service than a regular taxi service. Save your time. Book us now!"
 }
