Upgrade all translations

--- a/public/locales/italy/translation.json
+++ b/public/locales/italy/translation.json
@@ -1,20 +1,71 @@
 {
-  "Thanks": {
-    "1": "Thank you"
-  },
-  "Why": {
-    "1": "For watching this video"
-  },
-  "main-content": {
-    "1": "\"Prestige Paris Transfer\" è una società di trasferimento con navetta privata approvata dal governo francese. È noto per essere uno dei servizi di trasferimento navetta più facili da usare ed economici. Forniamo servizi di trasporto da e per Charles de Gaulle Roissy (CDG), Orly (ORY), Le Bourget (LBG), Beauvais Airport (BVA), Disneyland e da qualsiasi luogo in Francia."
-  },
-  "arrival": {
-    "1": "Arrivo"
-  },
-  "departure": {
-    "1": "Partenza"
-  },
-  "round-trip": {
-    "1": "Andata e ritorno"
-  }
+  "language": "Italian",
+  "main-content": "'Prestige Paris Transfer' è una società privata di trasferimento navetta approvata dal governo francese. È noto per essere uno dei servizi di trasferimento navetta più user-friendly e convenienti. Forniamo servizi di trasporto da e per Charles de Gaulle Roissy (CDG), Orly (ORY), Le Bourget (LBG), Beauvais Airport (BVA), Disneyland e da qualsiasi parte in Francia.",
+  "arrival": "Arrivo",
+  "departure": "Partenza",
+  "round-trip": "Andata e ritorno",
+  "footer-desc": "'Prestige Paris Transfer' è un servizio di trasferimento privato rinomato per essere uno dei più amichevoli e convenienti navetta aeroportuale in circolazione.",
+  "quick-links": "Collegamenti rapidi",
+  "book-now": "Prenota ora",
+  "rates": "Tariffe",
+  "call": "Chiamare",
+  "contact": "Contatto",
+  "pickup-location": "Luogo di ritiro",
+  "select-pickup-location": "Seleziona Luogo di ritiro...",
+  "drop-location": "Luogo di riconsegna",
+  "select-drop-location": "Seleziona Drop Place...",
+  "adult-riders": "Passeggeri adulti",
+  "child-riders": "Passeggeri bambini",
+  "your-travel-fare": "La tua tariffa di viaggio",
+  "our-service": "IL NOSTRO SERVIZIO",
+  "efficient": "Efficiente",
+  "worthy": "Degno",
+  "safe": "Cassaforte",
+  "professional": "Professionale",
+  "support": "Appoggiare",
+  "efficient-desc": "Ti verrà fornito un viaggio più veloce, comodo e affidabile.",
+  "worthy-desc": "I migliori servizi con prezzi accessibili.",
+  "safe-desc": "Viaggio sicuro per te e la tua famiglia.",
+  "professional-desc": "Servizio eccellente con professionisti ben addestrati.",
+  "support-desc": "Il miglior servizio clienti con personale di assistenza clienti ben addestrato.",
+  "special-packages": "Pacchetti Speciali",
+  "package-1": "Prenota Prestige Paris Transfer per un viaggio confortevole da CDG a Disneyland Paris. Incredibili offerte per viaggi singoli e di andata e ritorno e sei facilitato senza costi aggiuntivi per i tuoi bagagli. Hai bisogno di una visita a Disneyland? Prenota ora!",
+  "package-2": "Per un viaggio affidabile tra l'aeroporto di Orly e Parigi, prenotaci ora! Prestige Paris Transfer ti offre il miglior servizio. Nessun costo aggiuntivo per i bagagli e nessuna carta di credito sono richiesti per la prenotazione. Hai il privilegio delle migliori offerte di risparmio sui costi per trasferimenti di andata e ritorno.",
+  "package-3": "Vuoi un viaggio confortevole in veicoli di lusso? Prestige Paris Transfer è la tua scelta. Garantiamo un viaggio confortevole tra l'aeroporto ORLY e Disneyland Paris. Nessun costo aggiuntivo per i bagagli e puoi scegliere trasferimenti singoli o di andata e ritorno. Vuoi visitare Disneyland? Prenotaci ora!",
+  "package-4": "Per un viaggio veloce e affidabile tra CDG e Parigi, prenota Prestige Paris Transfer. Puoi viaggiare comodamente nei nostri veicoli di lusso e puoi avere i tuoi bagagli senza costi aggiuntivi. Ti daremo le migliori offerte per viaggi singoli e di andata e ritorno. Vuoi trasferire da Roissy-Charles de Gaulle Aeroporto a Parigi? Prenota Prestige Paris Transfer!",
+  "package-5": "Hai bisogno di visitare Disneyland? Prenota Prestige Paris Transfer per i tuoi trasferimenti tra l'aeroporto di Beauvais e Disneyland Paris. Non è necessario pagare un extra per il bagaglio e puoi scegliere trasferimenti singoli o di andata e ritorno. Forniamo giocattoli più veloci e trasferimenti affidabili nei nostri veicoli di lusso. Prenotaci ora!",
+  "package-6": "Per viaggi a prezzi accessibili tra l'aeroporto di Beauvais e Parigi, prenota subito Prestige Paris Transfer! Le migliori offerte per i tuoi viaggi singoli e di andata e ritorno. Nessun costo aggiuntivo per i bagagli e vi forniamo un servizio migliore di un normale servizio taxi. Risparmia tempo. Prenotaci ora!",
+  "arrival-or-pickup": "Dettagli di arrivo o ritiro",
+  "pickup-from": "Pick-up da:",
+  "pickup-from-ph": "Digita l'indirizzo di ritiro (facoltativo)",
+  "drop-to": "Passa a:",
+  "drop-to-ph": "Digitare l'indirizzo di destinazione (facoltativo)",
+  "pickup-date": "Data di ritiro:",
+  "pickup-date-ph": "Seleziona la data di ritiro...",
+  "pickup-time": "Tempo di ritiro (CET): *",
+  "flight-arrival-date": "Data di arrivo del volo/treno:",
+  "flight-arrival-date-ph": "Seleziona la data di ritiro...",
+  "flight-arrival-time": "Orario di arrivo del volo/treno (CET): *",
+  "flight-from": "Volo/Treno proveniente da:",
+  "flight-from-ph": "Da dove proviene il tuo volo / treno?",
+  "flight-number": "Numero volo/treno:",
+  "flight-number-ph": "Numero del tuo volo o treno",
+  "contact-us": "Contattaci",
+  "get-in-touch": "Mettiti in contatto con noi",
+  "call-us": "Chiamaci:",
+  "email": "E-mail:",
+  "website": "Sito web:",
+  "powered-by": "Promosso da:",
+  "departure-or-pickup": "Dettaglio partenza o ritiro",
+  "booking-note": "NOTA: La prenotazione deve essere effettuata almeno prima di 3 ore tramite prenotazione online.",
+  "personal-details": "Dati personali",
+  "your-name": "Il tuo nome:",
+  "your-name-ph": "Inserisci il tuo nome",
+  "phone": "Telefono:",
+  "email-ph": "Il tuo indirizzo e-mail",
+  "number-of-passengers": "Numero di passeggeri",
+  "travel-fare-is": "La tua tariffa di viaggio è",
+  "night-charge-notice": "Addebito notturno (tra le 22:00 e le 06:00): € 15",
+  "submit-reservation": "Invia prenotazione",
+  "additional-notes": "Note aggiuntive:"
 }
