--- a/public/locales/french/translation.json
+++ b/public/locales/french/translation.json
@@ -1,20 +1,71 @@
 {
-  "Thanks": {
-    "1": "Thank you"
-  },
-  "Why": {
-    "1": "For watching this video"
-  },
-  "main-content": {
-    "1": "'Prestige Paris Transfer' est une société de transfert de navette privée agréée par le gouvernement français. Il est réputé pour être l'un des services de transfert de navette les plus conviviaux et les plus rentables. Nous fournissons des services de transport depuis et vers Charles de Gaulle Roissy (CDG), Orly (ORY), Le Bourget (LBG), l'aéroport de Beauvais (BVA), Disneyland et depuis n'importe où en France."
-  },
-  "arrival": {
-    "1": "Arrivée"
-  },
-  "departure": {
-    "1": "Départ"
-  },
-  "round-trip": {
-    "1": "Aller-retour"
-  }
+  "language": "French",
+  "main-content": "'Prestige Paris Transfer' est une société de transfert en navette privée agréée par le gouvernement Français. Il est réputé pour être l’un des services de transfert en navette les plus conviviaux et les plus rentables. Nous assurons des services de transport depuis et vers Charles de Gaulle Roissy (CDG), Orly (ORY), Le Bourget (LBG), l’aéroport de Beauvais (BVA), Disneyland et depuis n’importe où en France.",
+  "arrival": "Arrivée",
+  "departure": "Départ",
+  "round-trip": "Aller-retour",
+  "footer-desc": "'Prestige Paris Transfer' est un service de transfert privé réputé pour être l’une des navettes aéroport les plus conviviales et les plus rentables.",
+  "quick-links": "Liens rapides",
+  "book-now": "Réservez maintenant",
+  "rates": "Tarifs",
+  "call": "Appeler",
+  "contact": "Contact",
+  "pickup-location": "Lieu de prise en charge",
+  "select-pickup-location": "Sélectionnez Lieu de ramassage...",
+  "drop-location": "Lieu de dépôt",
+  "select-drop-location": "Sélectionnez Lieu de dépôt...",
+  "adult-riders": "Passagers adultes",
+  "child-riders": "Enfants passagers",
+  "your-travel-fare": "Votre tarif de voyage",
+  "our-service": "NOTRE SERVICE",
+  "efficient": "Efficace",
+  "worthy": "Digne",
+  "safe": "Sûr",
+  "professional": "Professionnel",
+  "support": "Soutien",
+  "efficient-desc": "Vous bénéficierez d’un voyage plus rapide, confortable et fiable.",
+  "worthy-desc": "Les meilleurs services à des prix abordables.",
+  "safe-desc": "Voyage en toute sécurité pour vous et votre famille.",
+  "professional-desc": "Excellent service avec des professionnels bien formés.",
+  "support-desc": "Meilleur service à la clientèle avec un personnel de soutien à la clientèle bien formé.",
+  "special-packages": "Forfaits spéciaux",
+  "package-1": "Réservez Prestige Paris Transfer pour un voyage confortable de CDG à Disneyland Paris. Offres incroyables pour les voyages simples et aller-retour et vous êtes facilité sans frais supplémentaires pour vos bagages. Besoin d’une visite à Disneyland? Réservez maintenant!",
+  "package-2": "Pour un voyage fiable entre l’aéroport d’Orly et Paris, réservez-nous maintenant! Prestige Paris Transfer vous offre le meilleur service. Aucun frais supplémentaire pour les bagages et aucune carte de crédit ne sont requis pour la réservation. Vous avez le privilège de bénéficier des meilleures offres d’économie de coûts pour les transferts aller simple et aller-retour.",
+  "package-3": "Envie d’un voyage confortable dans des véhicules de luxe ? Prestige Paris Transfer est votre choix. Nous assurons un voyage confortable entre l’aéroport d’ORLY et Disneyland Paris. Pas de frais supplémentaires pour les bagages et vous pouvez choisir des transferts aller simple ou aller-retour. Envie de visiter Disneyland ? Réservez-nous maintenant!",
+  "package-4": "Pour un voyage rapide et fiable entre CDG et Paris, réservez Prestige Paris Transfer. Vous pouvez voyager confortablement dans nos véhicules de luxe et vous pouvez avoir vos bagages sans frais supplémentaires. Nous vous donnerons les meilleures offres pour les voyages simples et aller-retour. Vous souhaitez transférer de l’aéroport Roissy-Charles de Gaulle à Paris ? Réservez Prestige Paris Transfer!",
+  "package-5": "Besoin de visiter Disneyland? Réservez Prestige Paris Transfer pour vos transferts entre l’aéroport de Beauvais et Disneyland Paris. Pas besoin de payer un supplément pour vos bagages et vous pouvez choisir des transferts aller simple ou aller-retour. Nous fournissons des transferts de jouets plus rapides et fiables dans nos véhicules de luxe. Réservez-nous maintenant!",
+  "package-6": "Pour un voyage abordable entre l’aéroport de Beauvais et Paris, réservez dès maintenant Prestige Paris Transfer ! Meilleures offres pour vos allers-retours et aller-retour. Pas de frais supplémentaires pour les bagages et nous vous fournissons un meilleur service qu’un service de taxi régulier. Gagnez du temps. Réservez-nous maintenant!",
+  "arrival-or-pickup": "Détails de l’arrivée ou du ramassage",
+  "pickup-from": "Ramassage à partir de:",
+  "pickup-from-ph": "Saisissez votre adresse de ramassage (facultatif)",
+  "drop-to": "Déposer à:",
+  "drop-to-ph": "Saisissez votre adresse de destination (facultatif)",
+  "pickup-date": "Date de ramassage:",
+  "pickup-date-ph": "Sélectionnez Date de ramassage...",
+  "pickup-time": "Heure de ramassage (CET): *",
+  "flight-arrival-date": "Date d’arrivée du vol/train :",
+  "flight-arrival-date-ph": "Sélectionnez Date de ramassage...",
+  "flight-arrival-time": "Heure d’arrivée du vol /train (CET): *",
+  "flight-from": "Vol/Train en provenance de :",
+  "flight-from-ph": "D’où vient votre vol / train?",
+  "flight-number": "Numéro de vol/train :",
+  "flight-number-ph": "Numéro de votre vol ou de votre train",
+  "contact-us": "Contactez-nous",
+  "get-in-touch": "Contactez-nous",
+  "call-us": "Appelez-nous:",
+  "email": "Messagerie électronique:",
+  "website": "Site internet:",
+  "powered-by": "Alimenté par:",
+  "departure-or-pickup": "Détail du départ ou de la prise en charge",
+  "booking-note": "REMARQUE: La réservation doit être effectuée au moins avant 3 heures via la réservation en ligne.",
+  "personal-details": "Données personnelles",
+  "your-name": "Votre nom:",
+  "your-name-ph": "Entrez votre nom",
+  "phone": "Téléphone:",
+  "email-ph": "Votre adresse e-mail",
+  "number-of-passengers": "Nombre de passagers",
+  "travel-fare-is": "Votre tarif de voyage est",
+  "night-charge-notice": "Frais de nuit (entre 22h00 et 06h00) : 15 €",
+  "submit-reservation": "Soumettre une réservation",
+  "additional-notes": "Notes complémentaires :"
 }
