--- a/public/locales/span/translation.json
+++ b/public/locales/span/translation.json
@@ -1,20 +1,71 @@
 {
-  "Thanks": {
-    "1": "Thank you"
-  },
-  "Why": {
-    "1": "For watching this video"
-  },
-  "main-content": {
-    "1": "'Prestige Paris Transfer' es una empresa de transporte privado aprobada por el gobierno francés. Tiene fama de ser uno de los servicios de traslado de lanzadera más fáciles de usar y rentables. Brindamos servicios de transporte desde y hacia Charles de Gaulle Roissy (CDG), Orly (ORY), Le Bourget (LBG), Aeropuerto de Beauvais (BVA), Disneyland y desde cualquier lugar de Francia."
-  },
-  "arrival": {
-    "1": "Llegada"
-  },
-  "departure": {
-    "1": "Partida"
-  },
-  "round-trip": {
-    "1": "Viaje ida y vuelta"
-  }
+  "language": "Spanish",
+  "main-content": "'Prestige Paris Transfer' es una empresa de traslado privado aprobada por el gobierno francés. Tiene fama de ser uno de los servicios de traslado más fáciles de usar y rentables. Ofrecemos servicios de transporte desde y hacia Charles de Gaulle Roissy (CDG), Orly (ORY), Le Bourget (LBG), Aeropuerto de Beauvais (BVA), Disneyland y desde cualquier lugar de Francia.",
+  "arrival": "Llegada",
+  "departure": "Salida",
+  "round-trip": "Ida y vuelta",
+  "footer-desc": "'Prestige Paris Transfer' es un servicio de traslado privado reconocido por ser uno de los servicios de transporte al aeropuerto más amigables y rentables.",
+  "quick-links": "Enlaces rápidos",
+  "book-now": "Reservar ahora",
+  "rates": "Tarifas",
+  "call": "Llamar",
+  "contact": "Contacto",
+  "pickup-location": "Lugar de recogida",
+  "select-pickup-location": "Seleccione el lugar de recogida...",
+  "drop-location": "Lugar de entrega",
+  "select-drop-location": "Selecciona Colocar lugar...",
+  "adult-riders": "Pasajeros adultos",
+  "child-riders": "Pasajeros infantiles",
+  "your-travel-fare": "Su tarifa de viaje",
+  "our-service": "NUESTRO SERVICIO",
+  "efficient": "Eficaz",
+  "worthy": "Digno",
+  "safe": "Seguro",
+  "professional": "Profesional",
+  "support": "Apoyo",
+  "efficient-desc": "Se le proporcionará un viaje más rápido, cómodo y confiable.",
+  "worthy-desc": "Los mejores servicios con precios asequibles.",
+  "safe-desc": "Viaje seguro para usted y su familia.",
+  "professional-desc": "Excelente servicio con profesionales bien capacitados.",
+  "support-desc": "El mejor servicio al cliente con personal de atención al cliente bien capacitado.",
+  "special-packages": "Paquetes Especiales",
+  "package-1": "Reserve Prestige Paris Transfer para un viaje cómodo desde CDG a Disneyland Paris. Increíbles ofertas para viajes individuales y de ida y vuelta y se le facilita sin cargos adicionales por su equipaje. ¿Necesitas una visita a Disneyland? ¡Reserva ahora!",
+  "package-2": "Para un viaje confiable entre el aeropuerto de Orly y París, ¡resérvanos ahora! Prestige Paris Transfer le ofrece el mejor servicio. No se requieren cargos adicionales por equipaje ni tarjetas de crédito para la reserva. Usted es privilegiado con las mejores ofertas de ahorro de costos para traslados de ida y vuelta.",
+  "package-3": "¿Quieres un viaje cómodo en vehículos de lujo? Prestige Paris Transfer es su elección. Garantizamos un viaje cómodo entre el aeropuerto ORLY y Disneyland Paris. No hay cargos adicionales por equipaje y puede elegir traslados individuales o de ida y vuelta. ¿Quieres visitar Disneyland? ¡Resérvanos ahora!",
+  "package-4": "Para un viaje rápido y confiable entre CDG y París, reserve Prestige Paris Transfer. Puede viajar cómodamente en nuestros vehículos de lujo y puede tener su equipaje sin ningún cargo adicional. Te daremos las mejores ofertas para viajes individuales y de ida y vuelta. ¿Quieres trasladarte del Aeropuerto Roissy-Charles de Gaulle a París? ¡Reserva Prestige Paris Transfer!",
+  "package-5": "¿Necesitas visitar Disneyland? Reserve Prestige Paris Transfer para sus traslados entre el aeropuerto de Beauvais y Disneyland Paris. No es necesario pagar extra por su equipaje y puede elegir entre traslados individuales o de ida y vuelta. Proporcionamos transferencias de juguetes más rápidas y confiables en nuestros vehículos de lujo. ¡Resérvanos ahora!",
+  "package-6": "Para viajes asequibles entre el aeropuerto de Beauvais y París, ¡reserve Prestige Paris Transfer ahora! Las mejores ofertas para tus viajes individuales y de ida y vuelta. No hay cargos adicionales por equipaje y le brindamos un mejor servicio que un servicio de taxi regular. Ahorre tiempo. ¡Resérvanos ahora!",
+  "arrival-or-pickup": "Detalles de llegada o recogida",
+  "pickup-from": "Recogida desde:",
+  "pickup-from-ph": "Escriba su dirección de recogida (Opcional)",
+  "drop-to": "Bajar a:",
+  "drop-to-ph": "Escriba su dirección de destino (Opcional)",
+  "pickup-date": "Fecha de recogida:",
+  "pickup-date-ph": "Seleccione la fecha de recogida...",
+  "pickup-time": "Hora de recogida (CET): *",
+  "flight-arrival-date": "Fecha de llegada del vuelo/tren:",
+  "flight-arrival-date-ph": "Seleccione la fecha de recogida...",
+  "flight-arrival-time": "Hora de llegada del vuelo/tren (CET): *",
+  "flight-from": "Vuelo/tren desde:",
+  "flight-from-ph": "¿De dónde viene su vuelo / tren?",
+  "flight-number": "Número de vuelo/tren:",
+  "flight-number-ph": "Número de su vuelo o tren",
+  "contact-us": "Contáctenos",
+  "get-in-touch": "Ponte en contacto con nosotros",
+  "call-us": "Llámenos:",
+  "email": "Correo electrónico:",
+  "website": "Sitio web:",
+  "powered-by": "Funciona con:",
+  "departure-or-pickup": "Detalle de salida o recogida",
+  "booking-note": "NOTA: La reserva debe hacerse mínimo antes de 3 horas a través de la reserva en línea.",
+  "personal-details": "Datos personales",
+  "your-name": "Te llamas:",
+  "your-name-ph": "Introduce tu nombre",
+  "phone": "Teléfono:",
+  "email-ph": "Su dirección de correo electrónico",
+  "number-of-passengers": "Número de pasajeros",
+  "travel-fare-is": "Su tarifa de viaje es",
+  "night-charge-notice": "Cargo nocturno (Entre las 22:00 y las 06:00) : € 15",
+  "submit-reservation": "Enviar reserva",
+  "additional-notes": "Notas adicionales:"
 }
