--- a/public/locales/french/translation.json
+++ b/public/locales/french/translation.json
@@ -1,10 +1,10 @@
 {
   "language": "French",
-  "main-content": "'Prestige Paris Transfer' est une société de transfert en navette privée agréée par le gouvernement Français. Il est réputé pour être l’un des services de transfert en navette les plus conviviaux et les plus rentables. Nous assurons des services de transport depuis et vers Charles de Gaulle Roissy (CDG), Orly (ORY), Le Bourget (LBG), l’aéroport de Beauvais (BVA), Disneyland et depuis n’importe où en France.",
+  "main-content": "'Espresso Paris Transfer' est une société de transfert en navette privée agréée par le gouvernement Français. Il est réputé pour être l’un des services de transfert en navette les plus conviviaux et les plus rentables. Nous assurons des services de transport depuis et vers Charles de Gaulle Roissy (CDG), Orly (ORY), Le Bourget (LBG), l’aéroport de Beauvais (BVA), Disneyland et depuis n’importe où en France.",
   "arrival": "Arrivée",
   "departure": "Départ",
   "round-trip": "Aller-retour",
-  "footer-desc": "'Prestige Paris Transfer' est un service de transfert privé réputé pour être l’une des navettes aéroport les plus conviviales et les plus rentables.",
+  "footer-desc": "'Espresso Paris Transfer' est un service de transfert privé réputé pour être l’une des navettes aéroport les plus conviviales et les plus rentables.",
   "quick-links": "Liens rapides",
   "book-now": "Réservez maintenant",
   "rates": "Tarifs",
@@ -29,12 +29,12 @@
   "professional-desc": "Excellent service avec des professionnels bien formés.",
   "support-desc": "Meilleur service à la clientèle avec un personnel de soutien à la clientèle bien formé.",
   "special-packages": "Forfaits spéciaux",
-  "package-1": "Réservez Prestige Paris Transfer pour un voyage confortable de CDG à Disneyland Paris. Offres incroyables pour les voyages simples et aller-retour et vous êtes facilité sans frais supplémentaires pour vos bagages. Besoin d’une visite à Disneyland? Réservez maintenant!",
-  "package-2": "Pour un voyage fiable entre l’aéroport d’Orly et Paris, réservez-nous maintenant! Prestige Paris Transfer vous offre le meilleur service. Aucun frais supplémentaire pour les bagages et aucune carte de crédit ne sont requis pour la réservation. Vous avez le privilège de bénéficier des meilleures offres d’économie de coûts pour les transferts aller simple et aller-retour.",
-  "package-3": "Envie d’un voyage confortable dans des véhicules de luxe ? Prestige Paris Transfer est votre choix. Nous assurons un voyage confortable entre l’aéroport d’ORLY et Disneyland Paris. Pas de frais supplémentaires pour les bagages et vous pouvez choisir des transferts aller simple ou aller-retour. Envie de visiter Disneyland ? Réservez-nous maintenant!",
-  "package-4": "Pour un voyage rapide et fiable entre CDG et Paris, réservez Prestige Paris Transfer. Vous pouvez voyager confortablement dans nos véhicules de luxe et vous pouvez avoir vos bagages sans frais supplémentaires. Nous vous donnerons les meilleures offres pour les voyages simples et aller-retour. Vous souhaitez transférer de l’aéroport Roissy-Charles de Gaulle à Paris ? Réservez Prestige Paris Transfer!",
-  "package-5": "Besoin de visiter Disneyland? Réservez Prestige Paris Transfer pour vos transferts entre l’aéroport de Beauvais et Disneyland Paris. Pas besoin de payer un supplément pour vos bagages et vous pouvez choisir des transferts aller simple ou aller-retour. Nous fournissons des transferts de jouets plus rapides et fiables dans nos véhicules de luxe. Réservez-nous maintenant!",
-  "package-6": "Pour un voyage abordable entre l’aéroport de Beauvais et Paris, réservez dès maintenant Prestige Paris Transfer ! Meilleures offres pour vos allers-retours et aller-retour. Pas de frais supplémentaires pour les bagages et nous vous fournissons un meilleur service qu’un service de taxi régulier. Gagnez du temps. Réservez-nous maintenant!",
+  "package-1": "Réservez Espresso Paris Transfer pour un voyage confortable de CDG à Disneyland Paris. Offres incroyables pour les voyages simples et aller-retour et vous êtes facilité sans frais supplémentaires pour vos bagages. Besoin d’une visite à Disneyland? Réservez maintenant!",
+  "package-2": "Pour un voyage fiable entre l’aéroport d’Orly et Paris, réservez-nous maintenant! Espresso Paris Transfer vous offre le meilleur service. Aucun frais supplémentaire pour les bagages et aucune carte de crédit ne sont requis pour la réservation. Vous avez le privilège de bénéficier des meilleures offres d’économie de coûts pour les transferts aller simple et aller-retour.",
+  "package-3": "Envie d’un voyage confortable dans des véhicules de luxe ? Espresso Paris Transfer est votre choix. Nous assurons un voyage confortable entre l’aéroport d’ORLY et Disneyland Paris. Pas de frais supplémentaires pour les bagages et vous pouvez choisir des transferts aller simple ou aller-retour. Envie de visiter Disneyland ? Réservez-nous maintenant!",
+  "package-4": "Pour un voyage rapide et fiable entre CDG et Paris, réservez Espresso Paris Transfer. Vous pouvez voyager confortablement dans nos véhicules de luxe et vous pouvez avoir vos bagages sans frais supplémentaires. Nous vous donnerons les meilleures offres pour les voyages simples et aller-retour. Vous souhaitez transférer de l’aéroport Roissy-Charles de Gaulle à Paris ? Réservez Espresso Paris Transfer!",
+  "package-5": "Besoin de visiter Disneyland? Réservez Espresso Paris Transfer pour vos transferts entre l’aéroport de Beauvais et Disneyland Paris. Pas besoin de payer un supplément pour vos bagages et vous pouvez choisir des transferts aller simple ou aller-retour. Nous fournissons des transferts de jouets plus rapides et fiables dans nos véhicules de luxe. Réservez-nous maintenant!",
+  "package-6": "Pour un voyage abordable entre l’aéroport de Beauvais et Paris, réservez dès maintenant Espresso Paris Transfer ! Meilleures offres pour vos allers-retours et aller-retour. Pas de frais supplémentaires pour les bagages et nous vous fournissons un meilleur service qu’un service de taxi régulier. Gagnez du temps. Réservez-nous maintenant!",
   "arrival-or-pickup": "Détails de l’arrivée ou du ramassage",
   "pickup-from": "Ramassage à partir de:",
   "pickup-from-ph": "Saisissez votre adresse de ramassage (facultatif)",
