--- a/public/locales/italy/translation.json
+++ b/public/locales/italy/translation.json
@@ -1,10 +1,10 @@
 {
   "language": "Italian",
-  "main-content": "'Prestige Paris Transfer' è una società privata di trasferimento navetta approvata dal governo francese. È noto per essere uno dei servizi di trasferimento navetta più user-friendly e convenienti. Forniamo servizi di trasporto da e per Charles de Gaulle Roissy (CDG), Orly (ORY), Le Bourget (LBG), Beauvais Airport (BVA), Disneyland e da qualsiasi parte in Francia.",
+  "main-content": "'Espresso Paris Transfer' è una società privata di trasferimento navetta approvata dal governo francese. È noto per essere uno dei servizi di trasferimento navetta più user-friendly e convenienti. Forniamo servizi di trasporto da e per Charles de Gaulle Roissy (CDG), Orly (ORY), Le Bourget (LBG), Beauvais Airport (BVA), Disneyland e da qualsiasi parte in Francia.",
   "arrival": "Arrivo",
   "departure": "Partenza",
   "round-trip": "Andata e ritorno",
-  "footer-desc": "'Prestige Paris Transfer' è un servizio di trasferimento privato rinomato per essere uno dei più amichevoli e convenienti navetta aeroportuale in circolazione.",
+  "footer-desc": "'Espresso Paris Transfer' è un servizio di trasferimento privato rinomato per essere uno dei più amichevoli e convenienti navetta aeroportuale in circolazione.",
   "quick-links": "Collegamenti rapidi",
   "book-now": "Prenota ora",
   "rates": "Tariffe",
@@ -29,12 +29,12 @@
   "professional-desc": "Servizio eccellente con professionisti ben addestrati.",
   "support-desc": "Il miglior servizio clienti con personale di assistenza clienti ben addestrato.",
   "special-packages": "Pacchetti Speciali",
-  "package-1": "Prenota Prestige Paris Transfer per un viaggio confortevole da CDG a Disneyland Paris. Incredibili offerte per viaggi singoli e di andata e ritorno e sei facilitato senza costi aggiuntivi per i tuoi bagagli. Hai bisogno di una visita a Disneyland? Prenota ora!",
-  "package-2": "Per un viaggio affidabile tra l'aeroporto di Orly e Parigi, prenotaci ora! Prestige Paris Transfer ti offre il miglior servizio. Nessun costo aggiuntivo per i bagagli e nessuna carta di credito sono richiesti per la prenotazione. Hai il privilegio delle migliori offerte di risparmio sui costi per trasferimenti di andata e ritorno.",
-  "package-3": "Vuoi un viaggio confortevole in veicoli di lusso? Prestige Paris Transfer è la tua scelta. Garantiamo un viaggio confortevole tra l'aeroporto ORLY e Disneyland Paris. Nessun costo aggiuntivo per i bagagli e puoi scegliere trasferimenti singoli o di andata e ritorno. Vuoi visitare Disneyland? Prenotaci ora!",
-  "package-4": "Per un viaggio veloce e affidabile tra CDG e Parigi, prenota Prestige Paris Transfer. Puoi viaggiare comodamente nei nostri veicoli di lusso e puoi avere i tuoi bagagli senza costi aggiuntivi. Ti daremo le migliori offerte per viaggi singoli e di andata e ritorno. Vuoi trasferire da Roissy-Charles de Gaulle Aeroporto a Parigi? Prenota Prestige Paris Transfer!",
-  "package-5": "Hai bisogno di visitare Disneyland? Prenota Prestige Paris Transfer per i tuoi trasferimenti tra l'aeroporto di Beauvais e Disneyland Paris. Non è necessario pagare un extra per il bagaglio e puoi scegliere trasferimenti singoli o di andata e ritorno. Forniamo giocattoli più veloci e trasferimenti affidabili nei nostri veicoli di lusso. Prenotaci ora!",
-  "package-6": "Per viaggi a prezzi accessibili tra l'aeroporto di Beauvais e Parigi, prenota subito Prestige Paris Transfer! Le migliori offerte per i tuoi viaggi singoli e di andata e ritorno. Nessun costo aggiuntivo per i bagagli e vi forniamo un servizio migliore di un normale servizio taxi. Risparmia tempo. Prenotaci ora!",
+  "package-1": "Prenota Espresso Paris Transfer per un viaggio confortevole da CDG a Disneyland Paris. Incredibili offerte per viaggi singoli e di andata e ritorno e sei facilitato senza costi aggiuntivi per i tuoi bagagli. Hai bisogno di una visita a Disneyland? Prenota ora!",
+  "package-2": "Per un viaggio affidabile tra l'aeroporto di Orly e Parigi, prenotaci ora! Espresso Paris Transfer ti offre il miglior servizio. Nessun costo aggiuntivo per i bagagli e nessuna carta di credito sono richiesti per la prenotazione. Hai il privilegio delle migliori offerte di risparmio sui costi per trasferimenti di andata e ritorno.",
+  "package-3": "Vuoi un viaggio confortevole in veicoli di lusso? Espresso Paris Transfer è la tua scelta. Garantiamo un viaggio confortevole tra l'aeroporto ORLY e Disneyland Paris. Nessun costo aggiuntivo per i bagagli e puoi scegliere trasferimenti singoli o di andata e ritorno. Vuoi visitare Disneyland? Prenotaci ora!",
+  "package-4": "Per un viaggio veloce e affidabile tra CDG e Parigi, prenota Espresso Paris Transfer. Puoi viaggiare comodamente nei nostri veicoli di lusso e puoi avere i tuoi bagagli senza costi aggiuntivi. Ti daremo le migliori offerte per viaggi singoli e di andata e ritorno. Vuoi trasferire da Roissy-Charles de Gaulle Aeroporto a Parigi? Prenota Espresso Paris Transfer!",
+  "package-5": "Hai bisogno di visitare Disneyland? Prenota Espresso Paris Transfer per i tuoi trasferimenti tra l'aeroporto di Beauvais e Disneyland Paris. Non è necessario pagare un extra per il bagaglio e puoi scegliere trasferimenti singoli o di andata e ritorno. Forniamo giocattoli più veloci e trasferimenti affidabili nei nostri veicoli di lusso. Prenotaci ora!",
+  "package-6": "Per viaggi a prezzi accessibili tra l'aeroporto di Beauvais e Parigi, prenota subito Espresso Paris Transfer! Le migliori offerte per i tuoi viaggi singoli e di andata e ritorno. Nessun costo aggiuntivo per i bagagli e vi forniamo un servizio migliore di un normale servizio taxi. Risparmia tempo. Prenotaci ora!",
   "arrival-or-pickup": "Dettagli di arrivo o ritiro",
   "pickup-from": "Pick-up da:",
   "pickup-from-ph": "Digita l'indirizzo di ritiro (facoltativo)",
