--- a/public/locales/span/translation.json
+++ b/public/locales/span/translation.json
@@ -1,10 +1,10 @@
 {
   "language": "Spanish",
-  "main-content": "'Prestige Paris Transfer' es una empresa de traslado privado aprobada por el gobierno francés. Tiene fama de ser uno de los servicios de traslado más fáciles de usar y rentables. Ofrecemos servicios de transporte desde y hacia Charles de Gaulle Roissy (CDG), Orly (ORY), Le Bourget (LBG), Aeropuerto de Beauvais (BVA), Disneyland y desde cualquier lugar de Francia.",
+  "main-content": "'Espresso Paris Transfer' es una empresa de traslado privado aprobada por el gobierno francés. Tiene fama de ser uno de los servicios de traslado más fáciles de usar y rentables. Ofrecemos servicios de transporte desde y hacia Charles de Gaulle Roissy (CDG), Orly (ORY), Le Bourget (LBG), Aeropuerto de Beauvais (BVA), Disneyland y desde cualquier lugar de Francia.",
   "arrival": "Llegada",
   "departure": "Salida",
   "round-trip": "Ida y vuelta",
-  "footer-desc": "'Prestige Paris Transfer' es un servicio de traslado privado reconocido por ser uno de los servicios de transporte al aeropuerto más amigables y rentables.",
+  "footer-desc": "'Espresso Paris Transfer' es un servicio de traslado privado reconocido por ser uno de los servicios de transporte al aeropuerto más amigables y rentables.",
   "quick-links": "Enlaces rápidos",
   "book-now": "Reservar ahora",
   "rates": "Tarifas",
@@ -29,12 +29,12 @@
   "professional-desc": "Excelente servicio con profesionales bien capacitados.",
   "support-desc": "El mejor servicio al cliente con personal de atención al cliente bien capacitado.",
   "special-packages": "Paquetes Especiales",
-  "package-1": "Reserve Prestige Paris Transfer para un viaje cómodo desde CDG a Disneyland Paris. Increíbles ofertas para viajes individuales y de ida y vuelta y se le facilita sin cargos adicionales por su equipaje. ¿Necesitas una visita a Disneyland? ¡Reserva ahora!",
-  "package-2": "Para un viaje confiable entre el aeropuerto de Orly y París, ¡resérvanos ahora! Prestige Paris Transfer le ofrece el mejor servicio. No se requieren cargos adicionales por equipaje ni tarjetas de crédito para la reserva. Usted es privilegiado con las mejores ofertas de ahorro de costos para traslados de ida y vuelta.",
-  "package-3": "¿Quieres un viaje cómodo en vehículos de lujo? Prestige Paris Transfer es su elección. Garantizamos un viaje cómodo entre el aeropuerto ORLY y Disneyland Paris. No hay cargos adicionales por equipaje y puede elegir traslados individuales o de ida y vuelta. ¿Quieres visitar Disneyland? ¡Resérvanos ahora!",
-  "package-4": "Para un viaje rápido y confiable entre CDG y París, reserve Prestige Paris Transfer. Puede viajar cómodamente en nuestros vehículos de lujo y puede tener su equipaje sin ningún cargo adicional. Te daremos las mejores ofertas para viajes individuales y de ida y vuelta. ¿Quieres trasladarte del Aeropuerto Roissy-Charles de Gaulle a París? ¡Reserva Prestige Paris Transfer!",
-  "package-5": "¿Necesitas visitar Disneyland? Reserve Prestige Paris Transfer para sus traslados entre el aeropuerto de Beauvais y Disneyland Paris. No es necesario pagar extra por su equipaje y puede elegir entre traslados individuales o de ida y vuelta. Proporcionamos transferencias de juguetes más rápidas y confiables en nuestros vehículos de lujo. ¡Resérvanos ahora!",
-  "package-6": "Para viajes asequibles entre el aeropuerto de Beauvais y París, ¡reserve Prestige Paris Transfer ahora! Las mejores ofertas para tus viajes individuales y de ida y vuelta. No hay cargos adicionales por equipaje y le brindamos un mejor servicio que un servicio de taxi regular. Ahorre tiempo. ¡Resérvanos ahora!",
+  "package-1": "Reserve Espresso Paris Transfer para un viaje cómodo desde CDG a Disneyland Paris. Increíbles ofertas para viajes individuales y de ida y vuelta y se le facilita sin cargos adicionales por su equipaje. ¿Necesitas una visita a Disneyland? ¡Reserva ahora!",
+  "package-2": "Para un viaje confiable entre el aeropuerto de Orly y París, ¡resérvanos ahora! Espresso Paris Transfer le ofrece el mejor servicio. No se requieren cargos adicionales por equipaje ni tarjetas de crédito para la reserva. Usted es privilegiado con las mejores ofertas de ahorro de costos para traslados de ida y vuelta.",
+  "package-3": "¿Quieres un viaje cómodo en vehículos de lujo? Espresso Paris Transfer es su elección. Garantizamos un viaje cómodo entre el aeropuerto ORLY y Disneyland Paris. No hay cargos adicionales por equipaje y puede elegir traslados individuales o de ida y vuelta. ¿Quieres visitar Disneyland? ¡Resérvanos ahora!",
+  "package-4": "Para un viaje rápido y confiable entre CDG y París, reserve Espresso Paris Transfer. Puede viajar cómodamente en nuestros vehículos de lujo y puede tener su equipaje sin ningún cargo adicional. Te daremos las mejores ofertas para viajes individuales y de ida y vuelta. ¿Quieres trasladarte del Aeropuerto Roissy-Charles de Gaulle a París? ¡Reserva Espresso Paris Transfer!",
+  "package-5": "¿Necesitas visitar Disneyland? Reserve Espresso Paris Transfer para sus traslados entre el aeropuerto de Beauvais y Disneyland Paris. No es necesario pagar extra por su equipaje y puede elegir entre traslados individuales o de ida y vuelta. Proporcionamos transferencias de juguetes más rápidas y confiables en nuestros vehículos de lujo. ¡Resérvanos ahora!",
+  "package-6": "Para viajes asequibles entre el aeropuerto de Beauvais y París, ¡reserve Espresso Paris Transfer ahora! Las mejores ofertas para tus viajes individuales y de ida y vuelta. No hay cargos adicionales por equipaje y le brindamos un mejor servicio que un servicio de taxi regular. Ahorre tiempo. ¡Resérvanos ahora!",
   "arrival-or-pickup": "Detalles de llegada o recogida",
   "pickup-from": "Recogida desde:",
   "pickup-from-ph": "Escriba su dirección de recogida (Opcional)",
